--- a/README.pod
+++ b/README.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-Email::Enkoder
+Email::Enkoder - obfuscate email or html with randomized javascript
 
 =head1 VERSION
 
@@ -31,6 +31,7 @@ Christian Walde <walde.christian@googlemail.com>
 
 =head1 COPYRIGHT AND LICENSE
 
+
 Christian Walde has dedicated the work to the Commons by waiving all of his
 or her rights to the work worldwide under copyright law and all related or
 neighboring legal rights he or she had in the work, to the extent allowable by
@@ -38,3 +39,4 @@ law.
 
 Works under CC0 do not require attribution. When citing the work, you should
 not imply endorsement by the author.
+
